syntax = "proto3";

option go_package = "github.com/almeida-raphael/arpc_examples";

message Request {
  uint64     uint64 = 1;
}
